<resources>
    <string name="app_name">Local Room Database</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_age">Enter Age</string>
    <string name="add">Add</string>
    <string name="update_last_name">Update Last Name</string>
    <string name="update_first_name">Update First Name</string>
    <string name="update">Update</string>
</resources>