<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".roomDatabase.fragments.add.AddFragment">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="6dp"/>

    <EditText
        android:id="@+id/editFirstName"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="50dp"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:layout_marginTop="128dp"
        android:hint="@string/enter_first_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editSecondName"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:inputType="textCapSentences"
        android:hint="@string/enter_last_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editFirstName" />

    <EditText
        android:id="@+id/editAge"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:inputType="number"
        android:hint="@string/enter_age"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editSecondName" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAge" />
</androidx.constraintlayout.widget.ConstraintLayout>