<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".roomDatabase.fragments.update.UpdateFragment">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_arrow"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/updateFirstName"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="50dp"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:layout_marginTop="128dp"
        android:hint="@string/update_first_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/updateLastName"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:inputType="textCapSentences"
        android:hint="@string/update_last_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateFirstName" />

    <EditText
        android:id="@+id/updateAge"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:inputType="number"
        android:hint="Update Age"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateLastName" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateAge" />

</androidx.constraintlayout.widget.ConstraintLayout>